force-app/main/default/objects/Cost__c/Cost__c.object-meta.xml
<CustomObject>
    <label>Cost</label>
    <nameField>
        <label>Cost</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>