force-app/main/default/objects/Cost__c/fields/Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Cost_Method__c</fullName>
    <label>Cost Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Build Up</fullName>
            </value>
            <value>
                <fullName>Overriden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>