force-app/main/default/objects/Cost__c/fields/Cost_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sub_Type__c</fullName>
    <label>Cost Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>