force-app/main/default/objects/Cost__c/fields/Inside_Cost_20__c.field-meta.xml
<CustomField>
    <fullName>Inside_Cost_20__c</fullName>
    <label>Inside Cost 20</label>
    <length>255</length>
    <type>Text</type>
</CustomField>