force-app/main/default/objects/Cost__c/fields/Inside_Cost_Override_10__c.field-meta.xml
<CustomField>
    <fullName>Inside_Cost_Override_10__c</fullName>
    <label>Inside Cost Override 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>