force-app/main/default/objects/Cost__c/fields/Outside_Cost_10__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost_10__c</fullName>
    <label>Outside Cost 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>