force-app/main/default/objects/Cost__c/fields/Outside_Cost_30__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost_30__c</fullName>
    <label>Outside Cost 30</label>
    <length>255</length>
    <type>Text</type>
</CustomField>