force-app/main/default/objects/Cost__c/fields/Outside_Cost_Override_20__c.field-meta.xml
<CustomField>
    <fullName>Outside_Cost_Override_20__c</fullName>
    <label>Outside Cost Override 20</label>
    <length>255</length>
    <type>Text</type>
</CustomField>