force-app/main/default/objects/Cost__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RD</fullName>
            </value>
            <value>
                <fullName>BGR</fullName>
            </value>
            <value>
                <fullName>RLFVLV</fullName>
            </value>
            <value>
                <fullName>WGB</fullName>
            </value>
            <value>
                <fullName>HLD</fullName>
            </value>
            <value>
                <fullName>FlameProducts</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>