force-app/main/default/objects/Cost__c/fields/Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Ref_Id__c</fullName>
    <label>Ref Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>