force-app/main/default/objects/Cost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Method__c</columns>
    <columns>Cost_Sub_Type__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Inside_Cost_10__c</columns>
    <columns>Inside_Cost_20__c</columns>
    <columns>Inside_Cost_30__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>RLFVLV</value>
    </filters>
    <label>All</label>
</ListView>